# riscv-at-home

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  alu.v  alu_defs.v  decode.v  decode_defs.v  imem.v  regfile.v
test/: CMakeLists.txt  alu.cc  decode.cc  imem.cc  regfile.cc  test_utils.h
